style hover is applied

--- a/index.html
+++ b/index.html
@@ -12,40 +12,40 @@
 </head>
 <body>
    <div class="main-section">
-    <div class="content-section ">
+    <div class="content-section bg-black mt-5">
         <div class="input-section">
-            <input type="text"class="p-5 mt-5 bg-black text-white" placeholder="0">
+            <input type="text"class="p-5 mt-5" placeholder="0">
         </div>
-        <div class="button-section bg-black">
-        <div class="button-section-content">
+        <div class="button-section">
+        <div class="button-section-content mt-3">
             <button class="button btn-style-one">AC</button>
-            <button class="button btn-style-one">%</button>
-            <button class="button btn-style-one"><i class="fas fa-times"></i></button>
-            <button class="button bg-warning"><i class="fas fa-divide"></i></button>
+            <button class="button btn-style-one">(</button>
+            <button class="button btn-style-one">)</button>
+            <button class="button btn-style-three">%</button>
         </div>
         <div class="button-section-content mt-3">
             <button class="button btn-style-two">7</button>
-            <button class="button">8</button>
-            <button class="button">9</button>
-            <button class="button bg-warning"><i class="fas fa-times"></i></button>
+            <button class="button btn-style-two">8</button>
+            <button class="button btn-style-two">9</button>
+            <button class="button btn-style-three">*</button>
         </div>
         <div class="button-section-content mt-3">
-            <button class="button">4</button>
-            <button class="button">5</button>
-            <button class="button">6</button>
-            <button class="button bg-warning"><i class="fas fa-minus"></i></button>
+            <button class="button btn-style-two">4</button>
+            <button class="button btn-style-two">5</button>
+            <button class="button btn-style-two">6</button>
+            <button class="button btn-style-three">-</button>
         </div>
         <div class="button-section-content mt-3">
-            <button class="button">1</button>
-            <button class="button">2</button>
-            <button class="button">3</button>
-            <button class="button bg-warning">+</button>
+            <button class="button btn-style-two">1</button>
+            <button class="button btn-style-two">2</button>
+            <button class="button btn-style-two">3</button>
+            <button class="button btn-style-three">+</button>
         </div>
         <div class="button-section-content mt-3">
-            <button class="button">00</button>
-            <button class="button">0</button>
-            <button class="button">.</button>
-            <button class="button bg-warning">=</button>
+            <button class="button btn-style-two">0</button>
+            <button class="button btn-style-two">.</button>
+            <button class="button btn-style-two">=</button>
+            <button class="button btn-style-three">/</button>
         </div>
     </div>
     </div>
