--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="button-section pb-5">
         <div class="button-section-content mt-3">
             <button onclick="allClear()" class="button btn-style-one">AC</button>
-            <button onclick="backSpace()" class="button btn-style-one">b</button>
+            <button onclick="backSpace()" class="button btn-style-one">DE</button>
             <button onclick="displayData('.')" class="button btn-style-one">.</button>
             <button onclick="displayData('%')" class="button btn-style-three">%</button>
         </div>
@@ -42,7 +42,7 @@
             <button onclick="displayData('+')" class="button btn-style-three">+</button>
         </div>
         <div class="button-section-content mt-3">
-            <button onclick="displayData(00)" class="button btn-style-two">00</button>
+            <button onclick="zeroDisplay()" class="button btn-style-two">00</button>
             <button onclick="displayData(0)" class="button btn-style-two">0</button>
             <button onclick="displayOutput()" class="button btn-style-two">=</button>
             <button onclick="displayData('/')" class="button btn-style-three">/</button>
