percentage function added to percentage button

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <button onclick="allClear()" class="button btn-style-one">AC</button>
             <button onclick="backSpace()" class="button btn-style-one">DE</button>
             <button onclick="displayData('.')" class="button btn-style-one">.</button>
-            <button onclick="displayData('%')" class="button btn-style-three">%</button>
+            <button onclick="displayModulus('%')" class="button btn-style-three">%</button>
         </div>
         <div class="button-section-content mt-3">
             <button onclick="displayData(7)" class="button btn-style-two">7</button>
